# jove-performance

./: CMakeLists.txt  README.md  benchmark.plt  benchmark.txt  configure  do_configure  omp_scaling.sh  scaling.plt  scaling_2.txt
benchmarks/: benchmark.plt  benchmark.txt  scaling.plt  scaling_3a.txt  scaling_hgs.plt  scaling_new.plt  scaling_xeon.plt
benchmarks/c14h10/: benchmark.txt  scaling_4.txt  scaling_hgs.txt  scaling_hgs_boost.txt  scaling_hgs_k1.txt
benchmarks/h2o/: benchmark.txt  scaling.plt  scaling_0.txt  scaling_1.txt  scaling_3.txt  scaling_4.txt  scaling_hgs.txt  scaling_xeon.txt
benchmarks/h3coh/: benchmark.txt  scaling.plt  scaling_4.txt  scaling_hgs.txt  scaling_xeon.txt  scaling_xeon2.txt  scaling_xeon_1socket.txt  scaling_xeon_2sockets.txt
benchmarks/porphyrin/: scaling_hgs.txt
data/h3coh_mp2/: c.mat  cgto.mat  f.mat  inputs.vec  rpts.mat  rwts.mat  tpts.mat  twts.mat
docs/: Doxyfile.in
libjove/: CMakeLists.txt  jove.C  jove.h
libjove/grid/: jove_grid.C  jove_grid.h
libjove/loader/: loader_mp2_fromfile.C  loader_mp2_fromfile.h  loader_mp2_qchem.C  loader_mp2_qchem.h
libjove/mp/: do_mp2.C  do_mp2.h
libjove/utils/: pprinter.C  pprinter.h  ttimer.h
libjove/vaults/: vault_mp2.C  vault_mp2.h
tests/: CMakeLists.txt  libjove_tests.C
tests/mp/: do_mp2_test.C  do_mp2_test.h
